fix: the original scrollbar of the custom scrollbar component always shows up first and then hides

--- a/packages/MdEditor/styles/codeMirror.less
+++ b/packages/MdEditor/styles/codeMirror.less
@@ -52,6 +52,14 @@
   // }
 
   .cm-scroller {
+    // Firefox
+    scrollbar-width: none;
+
+    &::-webkit-scrollbar {
+      // Chrome/Safari
+      display: none;
+    }
+
     // 当没有代码行号的时候，给编辑区一个10的外间距
     .cm-content[contenteditable='true'] {
       margin: 10px;
